<resources>
    <string name="app_name">neural</string>
    <string name="learn">Обучить нейросеть</string>
    <string name="test">Проверить</string>
    <string name="epochText">Количество поколений =</string>
    <string name="learningText">Скорость обучения =</string>
    <string name="convSpeed">Скорость обучения</string>
    <string name="learnGraph">График обучения</string>
    <string name="title_activity_display">DisplayActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>